<resources>
    <string name="app_name">StudentDatabaseApp</string>
    <string name="student_name">Student Name</string>
    <string name="freshman">Freshman</string>
    <string name="sophomore">Sophomore</string>
    <string name="junior">Junior</string>
    <string name="senior">Senior</string>
    <string name="net_worth">Net Worth</string>
    <string name="new_student">New Student</string>
</resources>
